@@ -165,6 +165,8 @@
     <li>Counter - COUNTER</li>
     <li>Reference - REF</li>
     <li>Performance - PER</li>
+    <li>Color - COLOR<br>
+    </li>
   </ol>
   <li><a href="vfi.html">VFI - VFI</a><br>
   </li>
